--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 #drawingBoard {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
     width: 400px;
     height: 400px;
-    gap: 10px;
-    background-color: aqua;
+    gap: 1px;
+    background-color: rgb(183, 192, 192);
 }
 
 .pixel {
