--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,15 @@
     display: grid;
     width: 400px;
     height: 400px;
-    gap: 1px;
     background-color: rgb(183, 192, 192);
+    border: 2px solid rgb(0, 0, 0);
+    margin: 10px;
+}
+
+.grid {
+    gap: 2px;
 }
 
 .pixel {
-    background-color: blueviolet;
+    background-color: rgb(255, 255, 255);
 }
